--- a/index.html.html
+++ b/index.html.html
@@ -103,7 +103,7 @@
         <div class="heart">💗</div>
         <h1>Will you be my Valentine Subhanshi?</h1>
         <div class="gif-container" id="gifContainer">
-            <img id="gifImage" src="C:\Users\singh\Downloads\shopping-food.gif" alt="shopping-food GIF">
+            <img id="gifImage" src="shopping-food.gif" alt="shopping-food GIF">
         </div>
         <div class="success-message" id="successMessage">
            <h2> happy happy happy happy happy!!!<h2> 
@@ -142,7 +142,7 @@
             gifContainer.style.display = 'block';
             
             // Change the GIF source
-            gifImage.src = 'C:/Users/singh/Downloads/happy.gif'; // Make sure to update this path if necessary
+            gifImage.src = 'happy.gif'; // Make sure to update this path if necessary
             
             // Disable the buttons and reduce their opacity
             const yesBtn = document.getElementById('yesBtn');
